add Basic Swagger UI Endpoint

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,8 @@ psycopg2-binary = "*"
 djangorestframework = "*"
 dj-rest-auth = "*"
 django-allauth = "*"
+pyyaml = "*"
+uritemplate = "*"
 
 [dev-packages]
 pyright = "*"
